Show notification counter even on lock screen

- Unblock notifications in SessionStateNotificationBlocker
- Hide the message center by seeing the session sate (previously, it
  saw the count of notifications)
- Change height below scroll, by checking the visibility of message
  center (previously, it checked only the height)

Bug: 893945
Test: manual

Change-Id: I39d30d0949d0f44078193ab7e4859f66eeebf880
Reviewed-on: https://chromium-review.googlesource.com/c/1282426
Reviewed-by: Tatsuhisa Yamaguchi <yamaguchi@chromium.org>
Reviewed-by: Tetsui Ohkubo <tetsui@chromium.org>
Commit-Queue: Yoshiki Iguchi <yoshiki@chromium.org>
Cr-Commit-Position: refs/heads/master@{#601824}