ash/system/message_center/session_state_notification_blocker.cc
@@ -20,9 +20,7 @@ bool CalculateShouldShowNotification() {
   SessionController* const session_controller =
       Shell::Get()->session_controller();
 
-  return !session_controller->IsRunningInAppMode() &&
-         (!session_controller->IsScreenLocked() ||
-          AshMessageCenterLockScreenController::IsEnabled());
+  return !session_controller->IsRunningInAppMode();
 }
 
 bool CalculateShouldShowPopup() {
